--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This repository will include a collection of handy tools which will be built with AngularJS, Javascript, JQuery, HTML5 and CSS3.
-Please visit my website, http://www.zlwltech.com/Miscellaneous/handytools/index.html, to try it:P
+This repository will include a collection of small apps which will be built with AngularJS, Javascript, JQuery, HTML5 and CSS3.
+Please visit my website, http://www.zlwltech.com/lincong/index.html, to try them:P
